fix: Improve wrapping of `.ButtonBar` contents in mobile viewport sizes

--- a/src/scss/ButtonBar.scss
+++ b/src/scss/ButtonBar.scss
@@ -29,10 +29,6 @@
 	width: 0;
 	margin: 0 auto;
 	flex-grow: 1;
-
-	@media #{$mq-phone_phablet} {
-		width: 100%;
-	}
 }
 
 // ---------------------------------------------------------------------------
